[package]
name = "part02"
version = "0.1.0"
edition = "2021"

[lib]
name = "inflator"
path = "src/lib.rs"

[[bin]]
name = "part02"
path = "src/main.rs"

[profile.release]
debug = true

[profile.bench]
debug = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
flamegraph = "0.6.3"

[[bench]]
name = "inflating_benchmark"
harness = false
